[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.11.10"
borsh = "0.9.3"
borsh-derive = "0.9.3"

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "1.11.10"
solana-sdk = "1.11.10"

[lib]
crate-type = ["cdylib", "lib"]
